--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>My Website</title>
+    <title>Lindsey's Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Here we goooo!</h1>
     <script src="script.js"></script>
+    <!-- js says "Favorite Things" -->
   </body>
 </html>
