Created inital HTML, CSS, JS content

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <title>Lindsey's Website</title>
   </head>
   <body>
-    <h1>Here we goooo!</h1>
+    <h1>Hi, I'm Lindsey Pregent!</h1>
     <script src="script.js"></script>
-    <!-- js says "Favorite Things" -->
+    <!-- js says "Currently switching careers to find freedom" -->
+    <div class ="about-me">
+      <h3>About Me</h3>
+        <p>Hi, I'm Lindsey. I'm 32 and live in Brooklyn. 
+          Former cashier, barista and Administrative Assistant, currently working toward Software Engineer. 
+          Cat mama and cat-foster parent. I do TNR <em>(trap-neuter-return)</em> with the organization <a href="http://brooklynanimalaction.org/">Brooklyn Animal Action</a> and maintain my own Cat Instgram <a href="https://www.instagram.com/allcatsarebeautiful_bktnr/">All Cats Are Beautiful</a>. </p>
+    </div>
+    <div class ="projects">
+      <h3>Projects</h3>
+      <button onclick="myFunction()">Nothing so far!</button>
+    </div>
+    <div class = "cats">
+      <h4>Did someone ask for cute pictures?</h4>
+      <img
+      src="../personal-website/Images/Jenny.JPG"
+      alt="one-eyed-cat-named-Jenny"
+      width="150"
+      height="235"
+      />
+      <img
+      src="../personal-website/Images/Jenny3.JPG"
+      alt="one-eyed-cat-named-Jenny"
+      width="200"
+      height="235"
+      />
+    </div>
+
   </body>
 </html>
